test(gen): reduce flakiness in statistical tests